<resources>
    <string name="app_name">Sudoku Game</string>
    <string name="button1">1</string>
    <string name="buttonon">ON</string>
    <string name="buttonoff">OFF</string>
    <string name="pencilbutton">Notlar</string>
    <string name="eraserbutton">Sil</string>
    <string name="emptybutton"> </string>
    <string name="checkbutton">Kontrol</string>
    <string name="grid_test">GridTest</string>
    <string name="testing">testing</string>

    <!-- start screen button text -->
    <string name="StartScreen">Sudoku</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="load">Yeni Oyun</string>

    <string name="difficulty_hard">Zor</string>
    <string name="difficulty_medium">Orta</string>
    <string name="difficulty_easy">Kolay</string>

    <!-- strings for puzzle difficulty (+ filename) -->
    <string name="hardpuzzle">Difficulty: HARD</string>
    <string name="mediumpuzzle">Difficulty: MEDIUM</string>
    <string name="easypuzzle">Difficulty: EASY</string>
    <string name="kontol">Kontrol</string>

    <string name="zero"> </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

</resources>
